<resources>
    <string name="app_name">TransferElegance</string>
    <string name="name_hint">Name</string>>
    <string name="telephone_hint">+41 xx xx</string>
    <string name="continue_label">Continue</string>
    <string name="INTERNET_ERROR_MESSAGE">Interner error</string>
    <string name="EMPTY_FIELD_MESSAGE">Empty fields</string>
    <string name="ChangeUserData">Change</string>
    <string name="second_name">TransferElegance</string>
    <string name="settings">SETTINGS</string>
    <string name="history">HISTORY</string>
    <string name ="offline_message">Sorry :( \n Alex is offline. Try call him</string>
    <string name ="from_hint">Your location</string>
    <string name ="destination_hint">Set destination point</string>
    <string name ="your_location">"Your location"</string>
    <string name ="dest_location">"Destination location"</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="google_direction_key">AIzaSyDz2Ig33CPkAGL-ouQTH8QflAe58IlSpIg</string>
    <string name="call_alex">Call alex</string>
    <string name="number_alex">+41788739888</string>
    <string name="history_up">HISTORY</string>
    <string name="clear_history">Clear History</string>

</resources>
