<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.hmarka.kloop1996.transferelegance.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_login"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/name_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@{viewModel.name}"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                app:addTextChangedListener="@{viewModel.nameEditTextWatcher}" />

            <EditText
                android:id="@+id/telephoneEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:ellipsize="end"
                android:maxLines="1"
                android:hint="@string/telephone_hint"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@{viewModel.phone}"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                app:addTextChangedListener="@{viewModel.phoneEditTextWatcher}" />

            <!-- Login Button -->

            <Button
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:onClick="@{viewModel.onClickLogin}"
                android:text="@string/continue_label"
                android:textColor="@color/btn_login" />


        </LinearLayout>

    </LinearLayout>
</layout>

